# BigComBoy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  THIRD-PARTY.txt  vcpkg.json
.github/workflows/: Windows Builds.yml  win_build.yml
Icons/: icon.qrc
Icons/MacOS/: bcb.icns
Icons/Windows/: bcb.rc
Src/: CMakeLists.txt
Src/Common/: CMakeLists.txt  Config.cpp  Config.hpp  IO.cpp  IO.hpp  Math.cpp  Math.hpp  Timer.cpp  Timer.hpp
Src/Cores/: CMakeLists.txt
Src/Cores/GB/: APU.cpp  APU.hpp  Bus.cpp  Bus.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Constants.hpp  Core.cpp  Core.hpp  DMA.cpp  DMA.hpp  Debug.cpp  Debug.hpp  Disassembler.cpp  Disassembler.hpp  PPU.cpp  PPU.hpp  Pad.cpp  Pad.hpp  SM83.cpp  SM83.hpp  Timer.cpp  Timer.hpp  Trace.cpp  Trace.hpp
Src/GL/: CMakeLists.txt  CocoaContext.h  CocoaContext.mm  Context.hpp  DrawingFunctions.cpp  DrawingFunctions.hpp  GraphicsObjects.cpp  GraphicsObjects.hpp  NullContext.cpp  NullContext.hpp  Renderer.cpp  Renderer.hpp  WGLContext.cpp  WGLContext.hpp
Src/Input/: CMakeLists.txt  DeviceRegistry.cpp  DeviceRegistry.hpp  InputDevice.hpp  SDLControllerDevice.cpp  SDLControllerDevice.hpp
Src/Qt/: AboutWindow.cpp  AboutWindow.hpp  AboutWindow.ui  CMakeLists.txt  DiscordRPC.cpp  DiscordRPC.hpp  EmulatorContext.cpp  EmulatorContext.hpp  EmulatorView.cpp  EmulatorView.hpp  InputManager.cpp  InputManager.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Paths.cpp  Paths.hpp  Style.cpp  Style.hpp  SwapChain.hpp  main.cpp
Src/Qt/GB/: AudioSystem.cpp  AudioSystem.hpp  GBEmulatorController.cpp  GBEmulatorController.hpp
Src/Qt/GB/Debuggers/: Disassembler.cpp  Disassembler.hpp  Disassembler.ui  TraceLogWindow.cpp  TraceLogWindow.hpp  TraceLogWindow.ui
Src/Qt/GB/SubWindows/: AudioWindow.cpp  AudioWindow.hpp  AudioWindow.ui  EmulationWindow.cpp  EmulationWindow.hpp  EmulationWindow.ui  InputWindow.cpp  InputWindow.hpp  InputWindow.ui  SettingsWindow.cpp  SettingsWindow.hpp  SettingsWindow.ui  VideoWindow.cpp  VideoWindow.hpp  VideoWindow.ui
Src/Qt/OGL/: GLFunctions.cpp  GLFunctions.hpp  Renderer.cpp  Renderer.hpp
Test/: CMakeLists.txt  sm83_tests.cpp  test_types.cpp  test_types.hpp
src/frontend/: CMakeLists.txt  audio.cpp  audio.hpp  config.cpp  config.hpp  gui_constants.cpp  gui_constants.hpp  input.cpp  input.hpp  main.cpp  menu_bar.cpp  menu_bar.hpp  palette_edit.cpp  palette_edit.hpp  state.cpp  state.hpp
src/frontend/menu/: emulation_menu.cpp  emulation_menu.hpp  input_menu.cpp  input_menu.hpp  menu.cpp  menu.hpp  menu_bar.cpp  menu_bar.hpp  settings_menu.cpp  settings_menu.hpp  style.hpp
src/gb/: CMakeLists.txt  apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  constants.hpp  core.cpp  core.hpp  pad.cpp  pad.hpp  ppu.cpp  ppu.hpp  sm83.cpp  sm83.hpp  timer.cpp  timer.hpp
